--- a/index.html
+++ b/index.html
@@ -76,80 +76,126 @@
         <div class="carousel w-full bg-bike-primary-bg lg:h-[550px]">
             <!-- slide 1 -->
             <div id="slide1" class="carousel-item relative w-full">
-              <div class="flex flex-col lg:flex-row gap-20 p-4 items-center lg:p-24">
-                <div class="space-y-7 flex-1">
-                    <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
-                    <p>Amet minim mollit non deserunt ullamco 
-                        est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                <div class="flex flex-col lg:flex-row gap-20 p-4 items-center lg:p-24">
+                    <div class="space-y-7 flex-1">
+                        <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                         <button class="btn bg-bike-primary text-white">Purchase</button>
+                    </div>
+                    <div class="flex-1">
+                        <img src="images/slider/bike1.png" class="w-full">
+                    </div>
                 </div>
-                <div class="flex-1">
-                    <img src="images/slider/bike1.png" class="w-full">
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle">❮</a>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
                 </div>
-              </div>
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide4" class="btn btn-circle">❮</a> 
-                <a href="#slide2" class="btn btn-circle">❯</a>
-              </div>
-            </div> 
+            </div>
             <!-- slide 2 -->
             <div id="slide2" class="carousel-item relative w-full">
                 <div class="flex flex-col lg:flex-row gap-20 p-4 items-center lg:p-24">
                     <div class="space-y-7 flex-1">
                         <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
-                        <p>Amet minim mollit non deserunt ullamco 
+                        <p>Amet minim mollit non deserunt ullamco
                             est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
-                            <button class="btn bg-bike-primary text-white">Purchase</button>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
                         <img src="images/slider/bike2.png" class="w-full">
                     </div>
-                  </div>
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide1" class="btn btn-circle">❮</a> 
-                <a href="#slide3" class="btn btn-circle">❯</a>
-              </div>
-            </div> 
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle">❮</a>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+            </div>
             <!-- slide 3 -->
             <div id="slide3" class="carousel-item relative w-full">
                 <div class="flex flex-col lg:flex-row gap-20 p-4 items-center lg:p-24">
                     <div class="space-y-7 flex-1">
                         <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
-                        <p>Amet minim mollit non deserunt ullamco 
+                        <p>Amet minim mollit non deserunt ullamco
                             est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
-                            <button class="btn bg-bike-primary text-white">Purchase</button>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
                         <img src="images/slider/bike3.png" class="w-full">
                     </div>
-                  </div>
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide2" class="btn btn-circle">❮</a> 
-                <a href="#slide4" class="btn btn-circle">❯</a>
-              </div>
-            </div> 
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <a href="#slide4" class="btn btn-circle">❯</a>
+                </div>
+            </div>
             <!-- slide 4 -->
             <div id="slide4" class="carousel-item relative w-full">
                 <div class="flex flex-col lg:flex-row gap-20 p-4 items-center lg:p-24">
                     <div class="space-y-7 flex-1">
                         <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
-                        <p>Amet minim mollit non deserunt ullamco 
+                        <p>Amet minim mollit non deserunt ullamco
                             est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
-                            <button class="btn bg-bike-primary text-white">Purchase</button>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
                         <img src="images/slider/bike4.png" class="w-full">
                     </div>
-                  </div>
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide3" class="btn btn-circle">❮</a> 
-                <a href="#slide1" class="btn btn-circle">❯</a>
-              </div>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
             </div>
-          </div>
+        </div>
     </header>
     <main class="md:container md:mx-auto">
+        <!-- featured bikes -->
+        <section>
 
+        </section>
+        <!-- latest bikes -->
+        <section class="my-32">
+            <h3 class="text-5xl font-semibold text-center mb-12">Latest Bikes</h3>
+            <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <!-- first card -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img src="/images/others/latest1.png" alt="Latest Bikes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white uppercase hover:text-black">Purchase</button>
+                        </div>
+                    </div>
+                </div>
+            
+            <!-- second card -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img src="/images/others/latest2.png" alt="Latest Bikes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Motorcycles & Scooters</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white uppercase hover:text-black">Purchase</button>
+                        </div>
+                    </div>
+                </div>
+            <!-- third card -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img src="/images/others/latest3.png" alt="Latest Bikes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">2021 Honda CBR500R</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white uppercase hover:text-black">Purchase</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
