added happy clients section

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                         </div>
                     </div>
                 </div>
-            
-            <!-- second card -->
+
+                <!-- second card -->
                 <div class="card bg-base-100 shadow-xl">
                     <figure><img src="/images/others/latest2.png" alt="Latest Bikes" /></figure>
                     <div class="card-body">
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                 </div>
-            <!-- third card -->
+                <!-- third card -->
                 <div class="card bg-base-100 shadow-xl">
                     <figure><img src="/images/others/latest3.png" alt="Latest Bikes" /></figure>
                     <div class="card-body">
@@ -191,6 +191,76 @@
                             id nisi lectus at.</p>
                         <div class="card-actions">
                             <button class="btn bg-bike-primary text-white uppercase hover:text-black">Purchase</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- happy clients section -->
+        <section class="my-32">
+            <h3 class="text-5xl font-semibold text-center mb-12">Happy <span class="text-bike-primary">Clients
+                    Says</span></h3>
+            <div class="grid gap-11 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <!-- first review -->
+                <div class="card bg-base-100 p-9 border border-gray-400">
+                    <figure><img class="w-36" src="/images/others/user-1.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <p class="text-center">Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                        <div class="rating justify-center">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked/>
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <div class="text-center space-y-5 mt-4">
+                            <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+                            <p class="text-sm font-semibold text-info-content">Banker</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- second review -->
+                <div class="card bg-base-100 p-9 border border-gray-400">
+                    <figure><img class="w-36" src="/images/others/user-2.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <p class="text-center">Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                        <div class="rating justify-center">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked/>
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <div class="text-center space-y-5 mt-4">
+                            <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+                            <p class="text-sm font-semibold text-info-content">Banker</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- third review -->
+                <div class="card bg-base-100 p-9 border border-gray-400">
+                    <figure><img class="w-36" src="/images/others/user-3.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <p class="text-center">Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                        <div class="rating justify-center">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked/>
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <div class="text-center space-y-5 mt-4">
+                            <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+                            <p class="text-sm font-semibold text-info-content">Banker</p>
                         </div>
                     </div>
                 </div>
