done overall site with footer

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked/>
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
                         <div class="text-center space-y-5 mt-4">
@@ -234,7 +234,7 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked/>
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
                         <div class="text-center space-y-5 mt-4">
@@ -255,7 +255,7 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked/>
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
                         <div class="text-center space-y-5 mt-4">
@@ -266,10 +266,87 @@
                 </div>
             </div>
         </section>
-    </main>
-    <footer>
+        <!-- FAQ section -->
+        <section class="my-32">
+            <h3 class="text-5xl font-semibold text-center mb-12">Frequently Asked <span
+                    class="text-bike-primary">Questions</span></h3>
 
-    </footer>
+            <div class="hero min-h-screen">
+                <div class="hero-content flex-col lg:gap-24 lg:flex-row">
+                    <img src="/images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg " />
+                    <!-- accordian -->
+                    <div>
+                        <!-- first faq -->
+                        <div class="collapse collapse-arrow ">
+                            <input type="radio" name="my-accordion-2" checked="checked" />
+                            <div class="collapse-title text-xl font-medium">
+                                What are the most important things I should
+                                know about riding a bike?
+                            </div>
+                            <div class="collapse-content">
+                                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+                        <!-- second faq -->
+                        <div class="collapse collapse-arrow ">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">
+                                How can I tell if my helmet is old and I need a new one?
+                            </div>
+                            <div class="collapse-content">
+                                <p>Most helmets have a production date listed inside on a sticker, making it easy to identify exactly how old your helmet is.</p>
+                            </div>
+                        </div>
+                        <!-- third faq -->
+                        <div class="collapse collapse-arrow ">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">
+                                My bike has been in storage is it safe to ride?
+                            </div>
+                            <div class="collapse-content">
+                                <p>That depends upon it's condition before storage, what was done to prepare it for storage, how dry the storage was and how long it was in storage. Probably not totally safe. It likely needs air and for various fittings, nuts and bolts to be checked.</p>
+                            </div>
+                        </div>
+                        <!-- fourth faq -->
+                        <div class="collapse collapse-arrow ">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">
+                                What rules should I follow when riding my bike?
+                            </div>
+                            <div class="collapse-content">
+                                <p>The most important rules to consider while riding a bike are
+
+                                    1.Wear a Helmet: No matter what, always wear a helmet. Invest in a good quality helmet which fits you properly. Investing in a good helmet goes a long way. 
+                                    <br>
+                                    2.Proper riding gear: Safety comes first, if you're going for long rides, always wear proper riding gear to avoid any untoward incident.
+                                    <br>
+                                    3.Don't be a squid: Ride safely and responsibly. Cutting lanes, overspeeding and reckless driving aren't cool, they're madness.
+                                    <br>
+                                    Just follow these rules and you're good to go.
+                                    
+                                    Cheers!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer p-10 bg-neutral text-neutral-content">
+        <aside>
+          
+          <p>Bikerz Zone<br/>© 2020 Bikerz Zone. All rights reserved</p>
+        </aside> 
+        <nav>
+          <header class="footer-title">Get The App</header> 
+          <div class="grid grid-cols-1 gap-4">
+            <a href="#"><img class="w-36" src="images/others/android.png" alt=""></a> 
+            <a href="#"><img class="w-36" src="images/others/ios.png" alt=""></a> 
+          </div>
+        </nav>
+      </footer>
 </body>
 
 </html>
