--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="images/slider/bike1.png" class="w-full">
+                        <img src="./images/slider/bike1.png" class="w-full">
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -102,7 +102,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="images/slider/bike2.png" class="w-full">
+                        <img src="./images/slider/bike2.png" class="w-full">
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -120,7 +120,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="images/slider/bike3.png" class="w-full">
+                        <img src="./images/slider/bike3.png" class="w-full">
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -138,7 +138,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="images/slider/bike4.png" class="w-full">
+                        <img src="./images/slider/bike4.png" class="w-full">
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -159,7 +159,7 @@
             <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                 <!-- first card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest1.png" alt="Latest Bikes" /></figure>
+                    <figure><img src="./images/others/latest1.png" alt="Latest Bikes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">Ducati XDIAVEL S-73</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
@@ -172,7 +172,7 @@
 
                 <!-- second card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest2.png" alt="Latest Bikes" /></figure>
+                    <figure><img src="./images/others/latest2.png" alt="Latest Bikes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">Motorcycles & Scooters</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
@@ -184,7 +184,7 @@
                 </div>
                 <!-- third card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest3.png" alt="Latest Bikes" /></figure>
+                    <figure><img src="./images/others/latest3.png" alt="Latest Bikes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">2021 Honda CBR500R</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
@@ -203,7 +203,7 @@
             <div class="grid gap-11 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                 <!-- first review -->
                 <div class="card bg-base-100 p-9 border border-gray-400">
-                    <figure><img class="w-36" src="/images/others/user-1.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="./images/others/user-1.png" alt="user-1" /></figure>
                     <div class="card-body">
                         <p class="text-center">Slate helps you see how
                             many more days you need
@@ -224,7 +224,7 @@
                 </div>
                 <!-- second review -->
                 <div class="card bg-base-100 p-9 border border-gray-400">
-                    <figure><img class="w-36" src="/images/others/user-2.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="./images/others/user-2.png" alt="user-2" /></figure>
                     <div class="card-body">
                         <p class="text-center">Slate helps you see how
                             many more days you need
@@ -245,7 +245,7 @@
                 </div>
                 <!-- third review -->
                 <div class="card bg-base-100 p-9 border border-gray-400">
-                    <figure><img class="w-36" src="/images/others/user-3.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="./images/others/user-3.png" alt="user-3" /></figure>
                     <div class="card-body">
                         <p class="text-center">Slate helps you see how
                             many more days you need
@@ -273,7 +273,7 @@
 
             <div class="hero min-h-screen">
                 <div class="hero-content flex-col lg:gap-24 lg:flex-row">
-                    <img src="/images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg " />
+                    <img src="./images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg " />
                     <!-- accordian -->
                     <div>
                         <!-- first faq -->
@@ -342,8 +342,8 @@
         <nav>
           <header class="footer-title">Get The App</header> 
           <div class="grid grid-cols-1 gap-4">
-            <a href="#"><img class="w-36" src="images/others/android.png" alt=""></a> 
-            <a href="#"><img class="w-36" src="images/others/ios.png" alt=""></a> 
+            <a href="#"><img class="w-36" src="./images/others/android.png" alt=""></a> 
+            <a href="#"><img class="w-36" src="./images/others/ios.png" alt=""></a> 
           </div>
         </nav>
       </footer>
